[tool.poetry]
name = "ping-pong"
version = "0.1.0"
description = ""
authors = ["Wyatt Baek <president@gaplagov.org>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
